ajouter iPhones page

--- a/frontend-4/home_page.html
+++ b/frontend-4/home_page.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
-    <link rel="stylesheet" href="boutique.html">
+    <link rel="stylesheet" href="signup.html">
 
 </head>
 
@@ -32,8 +32,8 @@
         </ul>
 
         <div class="navbar-right">
-            <button class="btn login">Login</button>
-            <button class="btn signup">Sign Up</button>
+            <button onclick="window.open('login.html', '_blanck')" class="btn login">Login</button>
+            <button onclick="window.open('signup.html', '_blanck')" class="btn signup">Sign Up</button>
         </div>
     </nav>
 
@@ -101,7 +101,7 @@
     <!--------------------------------  Nos Produits ---------------------------------->
 
 
-    <div id="boutique" class="nos-produits">
+    <div onclick="window.open('iPhone.html', '_blanck')" id="boutique" class="nos-produits">
         <h1>Dans Notre Boutique</h1>
         <div class="grid-products">
 
@@ -110,8 +110,8 @@
                     <img src="pictures/iPhones-removebg-preview.png" alt="">
                 </div>
 
-                <div class="names">
-                    <h3>iPhones</h3>
+                <div onclick="window.open('iPhone.html', '_blanck')" class="names">
+                    <h3><a href="iPhone.html">Découvrir nos iPhones</a></h3>
                 </div>
 
             </div>
@@ -122,7 +122,7 @@
                 </div>
 
                 <div class="names">
-                    <h3>MacBooks</h3>
+                    <h3><a href="">Découvrir nos Macbooks</a></h3>
                 </div>
             </div>
 
@@ -132,7 +132,7 @@
                 </div>
 
                 <div class="names">
-                    <h3>iPhones</h3>
+                    <h3><a href="">Découvrir nos Apple Watch</a></h3>
                 </div>
             </div>
 
@@ -142,7 +142,7 @@
                 </div>
 
                 <div class="names">
-                    <h3>iPads</h3>
+                    <h3><a href="">Découvrir nos iPad</a></h3>
                 </div>
             </div>
 
@@ -152,7 +152,7 @@
                 </div>
 
                 <div class="names">
-                    <h3>AirPods</h3>
+                    <h3><a href="">Découvrir nos AirPods</a></h3>
                 </div>
 
             </div>
@@ -163,7 +163,7 @@
                 </div>
 
                 <div class="names">
-                    <h3>Accessoires</h3>
+                    <h3><a href="">Découvrir nos accessoires</a></h3>
                 </div>
             </div>
         </div>
